# lib_szip

./: .gitignore  CMakeLists.txt
cmake/: PackageConfig.cmake.in  configure.cmake  util.cmake
opt/: folders.csv
src/: CMakeLists.txt
test/: CMakeLists.txt
